logs/Slang/generated/hdlconv/hdlconvertor_p560.sv.log
name: hdlconvertor_p560
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p560.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p560.sv:1:1: error: language feature not yet supported
covergroup cg ( ref int x , ref int y, input int c);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p560.sv:12:3: error: expected member
  cross x, y {
  ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p560.sv:12:10: error: expected expression
  cross x, y {
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p560.sv:12:10: error: expected ':'
  cross x, y {
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p560.sv:12:10: error: expected ';'
  cross x, y {
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p560.sv:12:10: error: expected member
  cross x, y {
         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p560.sv:12:13: error: expected ':'
  cross x, y {
            ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p560.sv:13:22: error: expected ','
    option.weight = c;
                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p560.sv:14:3: error: expected member
  }
  ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p560.sv:18:1: error: language feature not yet supported
covergroup g4;
^~~~~~~~~~~~~~
